Multiple select truncated text fix

--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -40,3 +40,7 @@
   margin-top: 0px !important;
   padding: 1rem !important;
 }
+
+.ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value {
+  white-space: normal;
+}
